--- a/src/main/R/newtimetable.Rmd
+++ b/src/main/R/newtimetable.Rmd
@@ -1,5 +1,5 @@
-New timetable
-=============
+Sydney new public trasport timetable
+====================================
 
 Transport Data Exchange (TDX) program
 -------------------------------------
