--- a/src/main/R/newtimetable.Rmd
+++ b/src/main/R/newtimetable.Rmd
@@ -1,7 +1,15 @@
 ```{r setup, include=FALSE}
-#require(compiler)
-compiler::enableJIT(0)
+require(knitr)
 opts_chunk$set(cache=TRUE, message=FALSE, tidy=FALSE)
+
+suppressMessages(library(sp))
+suppressMessages(library(rgdal))
+suppressMessages(library(rgeos))
+suppressMessages(library(ggplot2))
+suppressMessages(library(ggmap))
+suppressMessages(library(lubridate))
+
+source("src/main/R/gtfs.r")
 ```
 
 Sydney new public transport timetable
@@ -39,61 +47,31 @@ In older versions of R you need to rename the first column or remove BOM manuall
 
 Extent of Greater Sydney public transport area
 ----------------------------------------------
-GTFS dataset must have **stops.txt** file which contains stop location (WGS84), name and several other attributes. Let's read stops from the previous timetable:
+GTFS dataset must have **stops.txt** file which contains stop location (WGS84), name and several other attributes. Let's read the previous timetable:
 ```{r}
-old.stops <- read.csv("../../../data/Oct2012/stops.txt")
+old <- gtfs.load("data/Oct2012")
 ```
 
 ```{r results='asis', echo=FALSE }
-old.stops$stop_code <- NULL
-old.stops$parent_station <- NULL
-old.stops$location_type <- NULL
-old.stops$wheelchair_boarding <- NULL
-
-kable(head(old.stops), "html")
+kable(head(old[["stops"]]), "html")
 ```
 
 and the new timetable:
 
 ```{r}
-new.stops <- read.csv("../../../data/Oct2013/stops.txt")
+new <- gtfs.load("data/Oct2013")
 ```
 
 ```{r results='asis', echo=FALSE }
-new.stops$stop_code <- NULL
-new.stops$parent_station <- NULL
-new.stops$location_type <- NULL
-new.stops$wheelchair_boarding <- NULL
-
-kable(head(new.stops), "html")
+kable(head(new[["stops"]]), "html")
 ```
 
 The **sp** package has **gConvexHull** function which returns the smallest convex polygon that contains all subgeometries, in our case all transit stops.
 
 ```{r}
-suppressMessages(library(sp))
-suppressMessages(library(rgeos))
-suppressMessages(library(ggplot2))
-suppressMessages(library(ggmap))
-```
-The first step is to convert lat/lon points into spatial object:
-```{r}
-old.sp <- old.stops[, c("stop_lat", "stop_lon")]
-coordinates(old.sp) <- ~ stop_lon + stop_lat # x, then y
-proj4string(old.sp) <- CRS("+proj=longlat +ellps=WGS84 +datum=WGS84") # assing coordinate reference system
-
-new.sp <- new.stops[, c("stop_lat", "stop_lon")]
-coordinates(new.sp) <- ~ stop_lon + stop_lat
-proj4string(new.sp) <- CRS("+proj=longlat +ellps=WGS84 +datum=WGS84")
-```
-and the compute convex hull for the old and new timetable
-```{r}
-old.stops.hull <- gConvexHull(old.sp)
-new.stops.hull <- gConvexHull(new.sp)
-
 polygons <- rbind(
-  data.frame(new.stops.hull@polygons[[1]]@Polygons[[1]]@coords, type = "new"), # str() is your friend
-  data.frame(old.stops.hull@polygons[[1]]@Polygons[[1]]@coords, type = "old")
+  data.frame(gtfs.bbox(new, "convex"), type = "new"),
+  data.frame(gtfs.bbox(new, "convex"), type = "old")
 )
 ```
 Apparently, public transport coverage remains unchanged under the new time table.
@@ -101,44 +79,17 @@ Apparently, public transport coverage remains unchanged under the new time table
 # get base map
 base <- with(polygons, get_map(paste(mean(y), mean(x), sep = " "), zoom = 7, color = "bw"))
 
+bbox <- coord_map(
+  xlim = extendrange(polygons$x), 
+  ylim = extendrange(polygons$y)
+)
+
 ggmap(base) + 
   geom_path(data = polygons, aes(x, y, colour = type), size = 1) +
   scale_color_manual(values = c("blue", "red")) +
-  geom_point(data = new.stops, aes(x = stop_lon, y = stop_lat), size = 0.5, colour = "black") + # transit stops in black
-  coord_map(xlim = c(149, 153), ylim = c(-31.5, -35.5)) +
+  geom_point(data = new[["stops"]], aes(x = stop_lon, y = stop_lat), size = 0.5, colour = "black") + # transit stops in black
+  bbox +
   ggtitle("Greater Sydney public transport area")
-```
-
-```{r}
-suppressMessages(library(rgdal))
-
-WGS84toUTMzone56 <- function (latlon) {
-  coordinates(latlon) <- ~ stop_lon + stop_lat
-  proj4string(latlon) <- CRS("+proj=longlat +ellps=WGS84 +datum=WGS84")
-  utm <- as.data.frame(spTransform(latlon, CRS("+proj=utm +zone=56 ellps=WGS84")))
-  names(utm) <- c("utm_lon", "utm_lat")
-  utm
-}
-
-# add UTM coords 
-old.stops <- data.frame(old.stops, WGS84toUTMzone56(old.stops[, c("stop_lat", "stop_lon")]))
-new.stops <- data.frame(new.stops, WGS84toUTMzone56(new.stops[, c("stop_lat", "stop_lon")]))
-
-dist <- nearest.dist(old.stops[, c("utm_lon", "utm_lat")], new.stops[, c("utm_lon", "utm_lat")], delta = 1000) # max 1km
-dist <- data.frame(summary(as.dgCMatrix.spam(dist)))
-names(dist) <- c("old", "new", "distance")
-dist <- merge(dist, old.stops, by.x = c("old"), by.y = c(0), all.x = T)
-dist <- merge(dist, new.stops, by.x = c("new"), by.y = c(0), all.x = T, suffixes = c(".old",".new"))
-dist <- dist[, -c(1, 2, 8, 9, 14, 15)]
-
-x <- within(dist, {
-  same.id <- as.character(stop_id.old) == as.character(stop_id.new)
-  same.name <- as.character(stop_name.old) == as.character(stop_name.new)
-  same.position <- stop_lat.old == stop_lat.new & stop_lon.old == stop_lon.new
-})
-
-ddply(x, ~ same.id + same.name + same.position, nrow)
-
 ```
 
 
