--- a/newtimetable.Rmd
+++ b/newtimetable.Rmd
@@ -1,13 +1,12 @@
-```{r setup, include=FALSE}
+```{r setup}
 require(knitr)
 opts_chunk$set(
-  cache = TRUE, cache.path = "../../../target/cache/",
+  cache.path = "target/cache/",
   message = FALSE, tidy = FALSE,
-  fig.path = "../../../target/figures/",
-  base.dir = "../../../target/",
-  animation.fun = hook_scianimator
+  fig.path = "target/figures/",
+  base.dir = "target/",
 )
-
+opts_knit$set(animation.fun = hook_scianimator)
 source("gtfs.r")
 ```
 
@@ -47,8 +46,8 @@ In older versions of R you need to rename the first column or remove BOM manuall
 Extent of Greater Sydney public transport area
 ----------------------------------------------
 GTFS dataset must have **stops.txt** file which contains stop location (WGS84), name and several other attributes. Let's read the previous timetable:
-```{r load-old-timetable }
-old <- gtfs.load("../../../data/Oct2012")
+```{r load-old-timetable, cache=TRUE }
+old <- gtfs.load("data/Oct2012")
 ```
 
 ```{r show-old-timetable, results='asis', echo=FALSE }
@@ -57,8 +56,8 @@ kable(head(old[["stops"]]), "html")
 
 and the new timetable:
 
-```{r load-new-timetable }
-new <- gtfs.load("../../../data/Oct2013")
+```{r load-new-timetable, cache=TRUE }
+new <- gtfs.load("data/Oct2013")
 ```
 
 ```{r show-new-timetable, results='asis', echo=FALSE }
@@ -95,7 +94,7 @@ Basic network statistics
 ------------------------
 Sydney transport network has three modes: bus, train, and ferry.
 
-```{r trips-summary }
+```{r trips-summary, cache=TRUE }
 old.singleday <- gtfs.trips(old, as.POSIXct("2013-10-09"))
 new.singleday <- gtfs.trips(new, as.POSIXct("2013-11-06"))
 
@@ -153,6 +152,7 @@ new.old.bins <- with(
 
 Some animation
 ```{r, network-changes-animation, fig.show='animate'}
+opts_chunk$set(animation.fun = hook_scianimator)
 values <- unique(c(seq(min(new.old.bins$count.diff), 0, length.out = 6), seq(0, max(new.old.bins$count.diff), length.out = 6)))
 mid = abs(min(new.old.bins$count.diff) / max(new.old.bins$count.diff))
 rescaled <- unique(c(
@@ -168,7 +168,6 @@ g <- scale_fill_gradientn(
   labels = round(values, -2),
   name="Difference in available services\n(reduced .. same .. increased)"
 )
-
 l_ply(sort(unique(new.old.bins$time)), function(t, d, grad) {
   g <- ggmap(base) + 
     geom_hex(data = d[d$time == t, ], stat="identity", aes(x = lon, y = lat, fill = count.diff), alpha = 0.8) +
