--- a/newtimetable.Rmd
+++ b/newtimetable.Rmd
@@ -170,17 +170,12 @@ Basic network statistics
 Sydney transport network has three modes: bus, train, and ferry.
 
 ```{r basic-stats, cache=TRUE, echo=FALSE}
-timetable.stats <- function(one.day) {
-  list(
-     "total.trips" = length(unique(one.day$trip_id)),
-     "bus.trips"   = length(unique(one.day[one.day$route_type == "Bus", ]$trip_id)),
-     "train.trips" = length(unique(one.day[one.day$route_type == "Train", ]$trip_id)),
-     "ferry.trips" = length(unique(one.day[one.day$route_type == "Ferry", ]$trip_id))
-  )
-}
 
-old.stats <- timetable.stats(old.singleday)
-new.stats <- timetable.stats(new.singleday)
+old.summary <- gtfs.trips.summary(old.singleday)
+new.summary <- gtfs.trips.summary(new.singleday)
+
+old.stats <- timetable.stats(old.summary, old)
+new.stats <- timetable.stats(new.summary, new)
 
 ```
 
@@ -191,8 +186,27 @@ Number of trips | `r old.stats[["total.trips"]]` | `r new.stats[["total.trips"]]
  - Train        | `r old.stats[["train.trips"]]` | `r new.stats[["train.trips"]]`
  - Ferry        | `r old.stats[["ferry.trips"]]` | `r new.stats[["ferry.trips"]]`
 Longest trip    | |
- - Bus          | 
- 
+ - Bus          | `r old.stats[["bus.trips"]]`   | `r new.stats[["bus.trips"]]`
+ - Train        | `r old.stats[["train.trips"]]` | `r new.stats[["train.trips"]]`
+ - Ferry        | `r old.stats[["ferry.trips"]]` | `r new.stats[["ferry.trips"]]`
+
+```{r speed-by-mode, cahce=TRUE, fig.height=10, fig.width=10, fig.show='animate', echo=FALSE }
+ggplot(data = old.summary, aes(y = travel_time, x = distance)) + 
+  geom_point(aes(colour = route_type), alpha = 0.7) +
+  scale_y_continuous(breaks = seq(0, 5, 1) * 3600, labels = seq(0, 5)) + xlim(0, 250) +
+  facet_grid(route_type ~ .) +
+  ylab("Travel time [hours]") +
+  xlab("Distance [km]") +
+  ggtitle("Old timetable")
+
+ggplot(data = new.summary, aes(y = travel_time, x = distance)) + 
+  geom_point(aes(colour = route_type), alpha = 0.7) +
+  scale_y_continuous(breaks = seq(0, 5, 1) * 3600, labels = seq(0, 5)) + xlim(0, 250) +
+  facet_grid(route_type ~ .) +
+  ylab("Travel time [hours]") +
+  xlab("Distance [km]") +
+  ggtitle("New timetable")
+```
 
 Public transport availability during a workday
 ----------------------------------------------
